stesura introduzione, aggiunta macro per carattere underscore aggiornamento diario piano di progetto

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_3.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_3.tex
@@ -20,27 +20,55 @@
 \section{Introduzione}
 	\subsection{Scopo del documento}.
 
-	Il presente documento illustra la pianificazione adottata dal gruppo {\hx} finalizzata alla produzione del progetto {\proj}. [more?] In esso vi sono contenuti:
+	Il presente documento illustra la pianificazione adottata dal gruppo {\hx} finalizzata alla produzione del progetto {\proj}. In esso vi sono contenuti:
 \begin{itemize}
 	\item Scelta del modello di sviluppo adottato;
-	\item Analisi dei rischi;
+	\item Analisi e trattamento dei rischi;
 	\item Pianificazione delle attività;
-	\item Preventivo [blablabla];
+	\item Preventivo delle risorse necessarie per lo svolgimento del progetto;
     \item Consuntivo di periodo.
 \end{itemize}
 
 	\subsection{Scopo del prodotto}
-	\scopo
+	Lo scopo del prodotto è quello di realizzare un editor di diagrammi \gloss{UML} che implementi il diagramma delle classi e il diagramma delle attività.
+	Il sistema dovrà fornire le seguenti funzionalità:
+	\begin{itemize}
+		\item salvare un progetto in un file "da definire";
+		\item fornire all'utente, attraverso un interfaccia, la possibilità di realizzare i propri diagrammi;
+		\item generare un applicativo \gloss{Java} dai diagrammi forniti dall'utente;
+	\end{itemize}
+	Il software finale dunque, sarà una \gloss{Web Application} realizzata con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} \gloss{lato client} e
+	"da decidere!!!!!!!!!!!!Java o Javascript \gloss{lato server}.
+	
 	\subsection{Glossario}
-	[macro]
+	Al fine di evitare ogni ambiguità circa i termini tecnici dominio del progetto, gli acronimi e le parole che necessitano di ulteriori spiegazioni 
+	saranno nei vari documenti marcate con il pedice \gloss{} e quindi presenti nel documento \textit{Glossario}.
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
-		[macro]
+		\begin{itemize}
+			\item \textit{Norme_di_progetto_v_1_0_0};
+			\item \textbf{Capitolato d'appalto C6: \proj}:
+			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
+			\item \textbf{Regolamento del progetto didattico}:
+			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
+			\item \textbf{Vincoli di organigramma e dettagli tecnico-economici}:
+			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
+			\
+		\end{itemize}
 		\subsubsection{Informativi}
-
+		\begin{itemize}
+			\item \textbf{Slides del corso di Ingegneria del Software}:
+			\\ \href{http://www.math.unipd.it/~tullio/IS-1/2016/}{http://www.math.unipd.it/~tullio/IS-1/2016/}.
+		\end{itemize}
 
 	\subsection{Scadenze}
-	[macro]
+	Il gruppo \hx ha deciso di rispettare le seguenti scadenze:
+		\begin{itemize}
+			\item \textbf{Revisione dei Requisiti}: 24-01-2017;
+			\item \textbf{Revisione di Progettazione}: 13-03-2017;
+			\item \textbf{Revisione di Qualifica}: 18-04-2017;
+			\item \textbf{Revisione di Accettazione}: 15-05-2017.
+		\end{itemize}
 
 
 \section{Modello di sviluppo}
