--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -10,12 +10,18 @@
 \begin{center}
 	\begin{tabular}{cp{3cm}cp{3cm}}
 	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
-	0.0.2 & {\LB} Responsabile & 27/12/2016 &  Inizio stesura Modello di sviluppo  \\ \hline
+	0.0.2 & {\PB} Responsabile & 27/12/2016 & Stesura Analisi dei Rischi\\ \hline
 	\end{tabular}
 \end{center}
 \begin{center}
 	\begin{tabular}{cp{3cm}cp{3cm}}
 	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
-	0.0.3 & {\PB} Responsabile & 27/12/2016 & Stesura Analisi dei Rischi\\ \hline
+	0.0.3 & {\LB} Responsabile & 27/12/2016 & Inizio stesura Modello di sviluppo\\ \hline
+	\end{tabular}
+\end{center}
+\begin{center}
+	\begin{tabular}{cp{3cm}cp{3cm}}
+	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
+	0.0.4 & {\PB} Responsabile & 28/12/2016 &  Stesura Introduzione  \\ \hline
 	\end{tabular}
 \end{center}
