--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -9,7 +9,7 @@
 \usepackage{hyperref}
 \usepackage{microtype}
 \usepackage{lmodern} %compila cosi?
-
+\usepackage{underscore}
 
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-vers}
