--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -15,6 +15,11 @@
 \maketitle
 \include{diario}
 \tableofcontents
+\newpage
+
+
+
+%%% Introduzione
 
 \section{Introduzione}
 
@@ -37,15 +42,18 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\item ISO/IEC 12207-1995: \url{http://www.math.unipd.it/\~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf}
 		\end{itemize}
 
-	\subsection{Studio di fattibilità}
-	La fase antecedente alla realizzazione del \gloss{progetto} consiste nel fissare delle riunioni in modo che il team possa discutere di esso. Sarà poi compito degli analisti redigere lo \texttt{studio di fattibilità},la cui struttura è specificata a seguire: %inserire struttura studio di fattibilità
-	\subsection{Analisi dei requisiti}
+
+
+%%% Processi primari
+
 \section{Processi primari}
 
-\subsection{Processo di sviluppo}
+\subsection{Fornitura}
 
 	\subsubsection{Studio di fattibilità}
 	La fase antecedente alla realizzazione del progetto\ped{g} consiste nel fissare delle riunioni in modo che il team\ped{g} possa discutere di esso. Sarà poi compito degli analisti redigere lo \texttt{studio di fattibilità},la cui struttura è specificata a seguire: %inserire struttura studio di fattibilità
+
+\subsection{Sviluppo}
 	\subsubsection{Analisi dei requisiti}
 	Sarà sempre compito degli analisti al termine dello studio di fattibilità di produrre l'\texttt{analisi dei requisiti}.Questo documento conterrà i requisiti raccolti ed i casi uso individuati nelle riunioni svolte.
 	Viene elencata nelle sezioni a seguire la struttura obbligatoria di requisiti e casi d'uso.
@@ -106,22 +114,22 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 	Viene utilizzato nella parte client per poter avere un edito interattivo utilizzabile.%da riscrivere quest'ultima frase 
 	\paragraph{Java tomcat o node.js}
 
-\subsection{Processo di fornitura}
 
-[norme sullo studio di fattibilità]
+
+%%% Processi di supporto
 
 \section{Processi di supporto}
 I processi normati in questa sezione hanno la funzione di aiutare gli altri processi.
 
-\subsection{Processo di documentazione}
-Per gestire la \gloss{documentazione} di progetto si è pensato, innanzitutto, di creare un ramo a parte (intitolato \texttt{doc}) a partire dal ramo \texttt{master} del nostro \gloss{repository}; questa scelta è stata dettata dal basso grado di dipendenza tra la documentazione e il resto delle parti della \gloss{configurazione} del prodotto. I documenti che svilupperemo sono i seguenti:
+\subsection{Documentazione}
+Per gestire la \gloss{documentazione} di progetto si è pensato, innanzitutto, di creare un \gloss{branch} a parte (intitolato \texttt{doc}) a partire dal branch \texttt{master} del nostro \gloss{repository}; questa scelta è stata dettata dal basso grado di dipendenza tra la documentazione e il resto delle parti della \gloss{configurazione} del prodotto. I documenti che svilupperemo sono i seguenti:
 \begin{itemize}
-	\item Documenti interni, rivolti ai membri del gruppo:
+	\item Documenti interni al gruppo:
 	\begin{description}
 		\item[studio di fattibilità] vaglia i \emph{pro} e i \emph{contra} di ogni capitolato d'appalto;
 		\item[norme di progetto] norma i processi del progetto.
 	\end{description}
-	\item Documenti esterni, rivolti non solo ai membri ma anche ai committenti e/o ai docenti:
+	\item Documenti rivolti non solo al gruppo ma anche ai committenti e/o ai docenti:
 	\begin{description}
 		\item[piano di progetto] dichiara come il gruppo intende gestire le risorse umane e temporali nel corso del progetto;
 		\item[piano di qualifica] descrive come il gruppo affronta il problema di garantire la qualità del prodotto da fornire;
@@ -137,52 +145,54 @@ Riportiamo qui di seguito le norme che riguardano lo sviluppo della documentazio
 
 \subsubsection{Ambiente di lavoro} I documenti andranno mantenuti in una struttura ad albero ben organizzata ma non troppo profonda; il miglior compromesso tra organizzazione e profondità dell'albero è risultata essere quella in figura [figura...].
 
-\subsubsection{Nomi ed estensioni} Nome ed estensione dei file sono regolati nel seguente modo:
+\subsubsection{Nomi, formati e identificazione} Nome ed estensione dei file sono regolati nel seguente modo:
 \paragraph{Nome} Il nome di un file o di una directory non dovrebbe contenere spazi, al fine di facilitare operazioni da riga di comando.
-\paragraph{Formato} Ogni documento dev'essere in formato \LaTeX{} (esportabile in PDF su foglio A4); la prima versione di un documento può essere in altri formati ma va presto sostituita da una versione in \LaTeX.
+\paragraph{Formato} Ogni documento dev'essere in formato gloss{Latex} con estensione \texttt{.tex} (esportabile in formato PDF su foglio A4); la prima \gloss{versione} di un documento può essere in altri formati ma va presto sostituita da una versione in Latex. I file Latex che definiscano delle \gloss{macro} o diano istruzioni di stile iniziano con la sigla “hx-” (per rimarcare che sono librerie create dal gruppo), hanno estensione \texttt{.sty} (tranne “hx-ambiente”, per permetterne l'inclusione prima di dichiarare la classe del documento) e vanno inclusi con il comando \texttt{\textbackslash usepackage\{\}}.
 \paragraph{Identificazione} Ogni versione di un documento è identificata univocamente dal nome del file, composto di una prima stringa esprimente la sua funzione (ad esempio “Piano\_di\_progetto”) e una seconda stringa con il numero di versionamento (ad esempio “\_0.0.2”).
-\paragraph{Numero di versionamento} Il numero di versionamento di un documento si compone di tre numeri: il primo viene incremementato ad ogni \textbf{approvazione} del documento; il secondo ad ogni sua \textbf{revisione}; il terzo ad ogni \textbf{aggiunta o modifica} sostanziale ad esso.
+\paragraph{Numero di versionamento} Il numero di versionamento di un documento si compone di tre numeri separati da un punto: il primo viene incremementato ad ogni \textbf{approvazione} del documento da parte del \gloss{responsabile di progetto}; il secondo ad ogni sua \textbf{revisione} da parte di un \gloss{verificatore}; il terzo ad ogni \textbf{aggiunta o modifica} sostanziale apportata da un redattore. L'incremento di un numero azzera i numeri alla destra di esso.
 
-\subsubsection{Frontespizio} Ogni documento, anche se breve, deve avere un frontespizio recante: titolo del documento, versione, nome del nostro gruppo, nome del progetto, data, autori, revisori, uso (interno o esterno), lista di distribuzione. Per fare questo, il redattore deve inserire \texttt{\textbackslash input\{../../util/hx-ambiente\}} all'inizio del documento e aggiustare i parametri con i comandi \texttt{\textbackslash version\{\}}, \texttt{\textbackslash creaz\{\}}, \texttt{\textbackslash author\{\}}, \texttt{\textbackslash supervisor\{\}}, \texttt{\textbackslash uso\{\}}, \texttt{\textbackslash dest\{\}} e \texttt{\textbackslash title\{\}}; per generare il frontespizio, va usato il comando \texttt{\textbackslash maketitle}.
-
-\subsubsection{Diario delle modifiche} Ogni documento deve includere un diario delle modifiche che elenca i cambiamenti apportati ad ogni versione rispetto alla precedente, assieme all'autore e alla data di tali cambiamenti. Per questo, il redattore deve includere (dopo il frontespizio) un file intitolato \texttt{diario.tex} nella stessa cartella del documento; al suo interno, deve usare le macro \texttt{\textbackslash begin\{diario\}} e \texttt{\textbackslash end\{diario\}}.
-
-\subsubsection{Indice dei contenuti} Documenti con più di tre o quattro sezioni devono riportare, all'inizio, un indice dei contenuti. Per questo, dopo l'inclusione del diario delle modifiche va posto il comando \texttt{\textbackslash tableofcontents}.
-
-\subsubsection{Ciclo di vita di un documento} Per ogni documento creato, i redattori stendono una bozza (in \LaTeX) che dev'essere poi controllata dai verificatori; se questi rilevano errori o possibili miglioramenti da apportare, segnalano il fatto al \gloss{responsabile di progetto} --- che provvede a rendicontare le ore di lavoro aggiuntive --- e modificano il documento dopo aver avvisato i redattori di tale documento.
-
-\subsubsection{Pagine} Ogni pagina dev'essere numerata e deve riportare in testata il titolo del documento e della sezione che ospita. % e magari il nome/logo del gruppo e il nome del progetto
-
-\subsubsection{Struttura} Dev'esserci un'unica struttura gerarchica di sezioni comune a tutta la documentazione: il sezionamento principale si attua con \texttt{\textbackslash section\{\}}; poi si scende nello specifico con \texttt{\textbackslash subsection\{\}}, \texttt{\textbackslash subsubsection\{\}} e infine \texttt{\textbackslash paragraph\{\}}. Questi quattro livelli di sezionamento generano parti di testo che vengono tracciate dall'indice generale e sono quindi atti a contenere parti di testo leggibili “ad accesso casuale” (cioè anche senza dover rileggere parti di testo precedenti); per quelle parti di testo che, pur avendo una propria strutturazione, vanno lette in modo “sequenziale”, si usano invece gli elenchi; questi non vengono riportati nell'indice generale e possono essere di tre tipi:
+\subsubsection{Struttura di un documento}
+\paragraph{Frontespizio} Ogni documento che sia più lungo di una pagina deve iniziare con un frontespizio recante: titolo del documento, versione, nome del nostro gruppo, nome del progetto, data, autori, revisori, uso (interno o esterno), lista di distribuzione. Per fare questo, il redattore deve inserire \texttt{\textbackslash input\{../../util/hx-ambiente\}} all'inizio del documento e aggiustare i parametri con i comandi \texttt{\textbackslash version\{\}}, \texttt{\textbackslash creaz\{\}}, \texttt{\textbackslash author\{\}}, \texttt{\textbackslash supervisor\{\}}, \texttt{\textbackslash uso\{\}}, \texttt{\textbackslash dest\{\}} e \texttt{\textbackslash title\{\}}; per generare il frontespizio, va usato il comando \texttt{\textbackslash maketitle}.
+\paragraph{Diario delle modifiche} Ogni documento deve includere un diario delle modifiche che elenca, dal più recente al più vecchio, i cambiamenti apportati a ogni versione rispetto alla precedente, assieme all'autore e alla data di tali cambiamenti. Per questo, il redattore deve includere (dopo il frontespizio) un file intitolato \texttt{diario.tex} nella stessa cartella del documento; al suo interno, deve usare le macro \texttt{\textbackslash begin\{diario\}} e \texttt{\textbackslash end\{diario\}}.
+\paragraph{Indice dei contenuti} Documenti con più di tre o quattro sezioni devono riportare, all'inizio, un indice dei contenuti. Per questo, dopo l'inclusione del diario delle modifiche va posto il comando \texttt{\textbackslash tableofcontents}.
+\paragraph{Sezionamento} Dev'esserci un'unica struttura gerarchica di sezioni comune a tutta la documentazione: il sezionamento principale si attua con \texttt{\textbackslash section\{\}}; poi si scende nello specifico con \texttt{\textbackslash subsection\{\}}, \texttt{\textbackslash subsubsection\{\}} e infine \texttt{\textbackslash paragraph\{\}}. Questi quattro livelli di sezionamento generano parti di testo che vengono tracciate dall'indice generale e sono quindi atti a contenere parti di testo leggibili “ad accesso casuale” (cioè anche senza dover rileggere parti di testo precedenti); per quelle parti di testo che, pur avendo una propria strutturazione, vanno lette in modo “sequenziale”, si usano invece gli elenchi; questi non vengono riportati nell'indice generale e possono essere di tre tipi:
 \begin{description}
 	\item[elenchi puntati] ambiente \texttt{itemize} --- elencano gli elementi di un insieme;
 	\item[elenchi numerati] ambiente \texttt{enumerate} --- elencano gli elementi di una sequenza;
 	\item[elenchi descrittivi] ambiente \texttt{description} --- elencano gli elementi di un dizionario di termini.
 \end{description}
+\paragraph{Intestazione} Ogni pagina dev'essere numerata e deve riportare in testata il titolo del documento e della sezione che ospita. % e magari il nome/logo del gruppo e il nome del progetto
 
-\subsubsection{Colori} Andrebbe minimizzato l'uso di colori, al fine di evitare ambiguità nel caso un documento venga stampato in bassa qualità.
+\subsubsection{Ciclo di vita di un documento} Per ogni documento creato, i redattori stendono una bozza (in Latex) che dev'essere poi controllata dai verificatori; se questi rilevano errori o possibili miglioramenti da apportare, segnalano il fatto al \gloss{responsabile di progetto} --- che provvede a rendicontare le ore di lavoro aggiuntive --- e modificano il documento dopo aver avvisato i redattori di tale documento.
 
-\subsubsection{Glossario} All'interno di una sezione, la prima occorrenza di un termine che si trovi nel glossario dev'essere evidenziata e segnata con un pedice (\gloss{[termine in glossario]}) tramite la macro \texttt{\textbackslash gloss\{termine\}}, in modo da far capire che si trova nel glossario.
+\subsubsection{Termini del glossario} All'interno di una sezione, la prima occorrenza di un termine che si trovi nel glossario dev'essere evidenziata e segnata con un pedice (\gloss{[termine in glossario]}) tramite la macro \texttt{\textbackslash gloss\{termine\}}, in modo da far capire che si trova nel glossario.
 
-\subsubsection{Grammatica e tipografia} Tutti i documenti vanno redatti in italiano. Il manuale utente viene anche tradotto in inglese, data la natura open-source del progetto. I documenti in italiano osservano le usuali regole grammaticali, tra cui evidenziamo:
+\subsubsection{Grammatica e tipografia} Tutti i documenti vanno redatti in italiano. Il manuale utente viene anche tradotto in inglese, data la natura open-source del progetto. I documenti in italiano osservano le usuali regole grammaticali italiane, tra cui evidenziamo:
 \begin{itemize}
 	\item La punteggiatura è seguita ma non preceduta da uno spazio.
 	\item Le parole straniere di uso comune (computer, radar, web\dots) non vanno evidenziate, per non appesantire il testo; vanno invece evidenziate quelle straniere di uso \emph{non} comune, come \emph{framework} o \emph{way of working}. Quando un termine straniero ha una traduzione italiana che non sia troppo strana o artificiosa, va preferita la traduzione in italiano.
-	\item Gli elementi di un elenco sono separati da un punto e virgola (quindi iniziano con lettera minuscola), tranno l'ultimo che si conclude con un punto. Nel caso che anche un solo elemento dell'elenco si componga di più frasiseparate da segno di punteggiatura forte, tutti gli elementi dell'elenco iniziano per maiuscola e finiscono con un punto. In entrambi i casi, ogni elenco è introdotto dai due punti.
+	\item Gli elementi di un elenco sono separati da un punto e virgola (quindi iniziano con lettera minuscola), tranne l'ultimo che si conclude con un punto. Nel caso che anche un solo elemento dell'elenco si componga di più frasi separate da segno di punteggiatura forte, tutti gli elementi dell'elenco iniziano per maiuscola e finiscono con un punto. In entrambi i casi, ogni elenco è introdotto dai due punti.
 \end{itemize}
-L'evidenziazione di un termine va fatta con \texttt{\textbackslash emph\{\}}. Ogni dubbio su grammatica o tipografia va chiarito consultando l'appendice A del testo open-source \url{http://www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}.
+L'evidenziazione di un termine va fatta con \texttt{\textbackslash emph\{\}}. Ogni altro dubbio su grammatica o tipografia va chiarito consultando l'appendice A del testo open-source \url{http://www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}.
+
+\subsubsection{Colori} Andrebbe minimizzato l'uso di colori, al fine di evitare ambiguità nel caso un documento venga stampato in bassa qualità.
+
+\subsection{Configurazione} \dots
+
+\subsection{Qualità} \dots
+
+\subsection{Verifica} \dots
+
+\subsection{Validazione} \dots
 
 
 
-\subsection{Processo di verifica} \dots
-
-\subsection{Strumenti} \dots
+%%% Processi organizzativi
 
 \section{Processi organizzativi}
 
-\subsection{Processo di miglioramento} % da ISO 12207-1995; pensavo fosse importante quindi l'ho aggiunto
-Man mano che si procede nel progetto, è bene stare attenti a non lasciare che le attività ripetitive degradino in qualità. Ogni processo, essendo un insieme di attività che si ripetono, deve quindi abbracciare il modello \gloss{PDCA} [...]. Ogni volta che un documento verrà verificato, i verificatori discuteranno con il responsabile la possibilità di segnalare a tutto il gruppo gli errori più ricorrenti.
+\subsection{Gestione organizzativa}
 
-\subsection{Strumenti}
+\subsection{Formazione}
 
 \end{document}
