--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -2,10 +2,10 @@
 % da usare tramite il comando \input{../../util/hx-vers}
 % da aggiornare con il comando ./versioni.sh (dalla cartella doc)
 
-\newcommand{\NdP}{Norme\_di\_progetto\_v\_0\_0\_3}
-\newcommand{\Verbali}{Verbali}
-\newcommand{\AdR}{Analisi\_dei\_requisiti\_0\_0\_0}
-\newcommand{\SdF}{Studio\_di\_fattibilita\_0\_0\_0}
-\newcommand{\PdP}{Piano\_di\_progetto\_v\_0\_0\_1}
-\newcommand{\PdQ}{Piano\_di\_qualifica\_0\_0\_0}
-\newcommand{\Glossario}{Glossario\_0\_0\_0}
+\newcommand{\NdP}{Norme\_di\_progetto\_v\_0\_0\_3.pdf}
+\newcommand{\Verbali}{Verbali.pdf}
+\newcommand{\AdR}{Analisi\_dei\_requisiti\_0\_0\_0.pdf}
+\newcommand{\SdF}{Studio\_di\_fattibilita\_0\_0\_0.pdf}
+\newcommand{\PdP}{Piano\_di\_progetto\_v\_0\_0\_3.pdf}
+\newcommand{\PdQ}{Piano\_di\_qualifica\_0\_0\_0.pdf}
+\newcommand{\Glossario}{Glossario\_0\_0\_0.pdf}
