--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -35,6 +35,8 @@
 		\end{tabular}
 		\vfill
 
-		{\large \@date \par}
+		{\large \email \par}
+		\vspace{0.5cm}
+		{\normalsize \repo \par}
 	\end{titlepage}
 }
