--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -25,3 +25,9 @@
 	0.0.4 & {\PB} Responsabile & 28/12/2016 &  Stesura Introduzione  \\ \hline
 	\end{tabular}
 \end{center}
+\begin{center}
+	\begin{tabular}{cp{3cm}cp{3cm}}
+	\textbf{Versione} & \textbf{Autore e Ruolo} & \textbf{Data} & \textbf{Descrizione} \\ \hline
+	0.0.5 & {\PB} Responsabile & 29/12/2016 &  Stesura Pianificazione delle Attività  \\ \hline
+	\end{tabular}
+\end{center}
